cambios en el nombre

--- a/ejercicio4.html
+++ b/ejercicio4.html
@@ -13,7 +13,7 @@
             console.log("Felicidades, Adivinaste el número");
         }
         else{
-            console.log("Lo sineto, el número era", numero);
+            console.log("Lo siento, el número era", numero);
         }
     </script>
 </body>
