--- a/ejercicio4.html
+++ b/ejercicio4.html
@@ -11,9 +11,11 @@
         let adivina= prompt("Adivina un número entre 1 y 10");
         if(adivina==numero){
             console.log("Felicidades, Adivinaste el número");
+            document.write("Felicidades, Adivinaste el número")
         }
         else{
             console.log("Lo siento, el número era", numero);
+            document.write("Lo siento, el número era", numero)
         }
     </script>
 </body>
