--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -11,8 +11,10 @@
         if(numero >100){
             let total=numero-(numero*0.1);
             console.log("el valor de su compra es", total);
+            document.write("el valor de su compra es", total)
         }else{
             console.log("el valor de su compra es", numero);
+            document.write("el valor de su compra es", total)
         }
 
     </script>
